--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -48,7 +48,7 @@ p {
   font-size: 16px;
 }
 
-.hero {
+#hero {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -70,7 +70,7 @@ p {
 .content {
   width: 75%;
   display: inline-block;
-  margin-left: 20px;
+  margin-left: ;
 }
 
 .benefits {
@@ -89,27 +89,7 @@ p {
   color: #ffffff;
 }
 
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-cost {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
 .benefit-lead h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.benefit-cost h3 {
   margin-bottom: 10px;
   text-align: center;
 }
@@ -120,37 +100,7 @@ p {
   max-width: 150px;
 }
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
-.benefit-cost img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
-
 .search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
