--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -30,10 +30,6 @@ body {
   font-size: 20px;
 }
 
-.nav div ul {
-  list-style-type: none;
-}
-
 .nav div ul li {
   display: inline-block;
   margin-left: 25px;
@@ -48,7 +44,7 @@ p {
   font-size: 16px;
 }
 
-#hero {
+#main {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
@@ -84,23 +80,23 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
+.aside {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-lead h3 {
+.aside h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-lead img {
+.aside img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.search-engine-optimization {
+.section {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -109,29 +105,11 @@ p {
   color: #ffffff;
 }
 
-.search-engine-optimization img {
+.section img {
   max-height: 200px;
 }
 
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.section h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
